--- a/Exaam/it-topics-2-examen/stijl/stijl.css
+++ b/Exaam/it-topics-2-examen/stijl/stijl.css
@@ -41,3 +41,21 @@ a:link{
 a:hover{
     color: #5599bb;
 }
+label{
+    margin-bottom: 5px;
+    border-radius: 5px;
+}
+input, select{
+    margin-bottom: 10px;
+    width: 100%;
+}
+#disclaimer{
+    size: 5px;
+    color: lightgray;
+}
+#inleveren{
+    background-color: #343a40;
+    width: auto;
+    color: white;
+    border-radius: 5px;
+}
