aanbod pagina exaam klaar

--- a/Exaam/it-topics-2-examen/stijl/stijl.css
+++ b/Exaam/it-topics-2-examen/stijl/stijl.css
@@ -4,7 +4,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
-#it_employees{
+.it_fotos{
     width: 400px;
     border-radius: 1rem;
     box-shadow: 5px 5px 5px lightgray;
